experimental/ir/testdata/fields/maps/map_entry.proto.stderr.txt
error: `map_entry` cannot be set explicitly
  --> testdata/fields/maps/map_entry.proto:13:12
   |
13 |     option map_entry = true;
   |            ^^^^^^^^^
   = help: `map_entry` is set automatically for synthetic map entry types, and
           cannot be set with an option setting

encountered 1 error
